@@ -1,3 +1,10 @@
+2013-01-04  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* XeTeX_ext.c: Use xcalloc() and strncpy() instead of strndup()
+	because there are systems without it, e.g., MinGW.
+	* xetex.h: Include "XeTeXOTMath.h" (protos for xetex.web).
+	* am/xetex.am: Drop obsolete files from XeTeX change file merge.
+
 2013-01-03  Khaled Hosny  <khaledhosny@eglug.org>
 
 	Merge changes from XeTeX repository.
